Update meta descriptions for all pages

--- a/knowyourdiseases/GBS.html
+++ b/knowyourdiseases/GBS.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்." />
     <base href="/">
     <style>
         img.wp-smiley,
@@ -3885,7 +3885,7 @@
                                 <p class="custom-entry-title">குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS)</p>
                             
                                 <h2><span style="color: #0000ff;"><strong>Guillain-Barr&eacute; சிண்ட்ரோம் என்றால் என்ன?</strong></span></h2>
-                                <h3>&nbsp; Guillain-Barr&eacute; சிண்ட்ரோம் அல்லது "GBS" என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை "Acute Inflammatory Demyelinating Polyneuropathy" அல்லது "AIDP" என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்.</h3>
+                                <h3>Guillain-Barr&eacute; சிண்ட்ரோம் அல்லது "GBS" என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை "Acute Inflammatory Demyelinating Polyneuropathy" அல்லது "AIDP" என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்.</h3>
                                 <h3>GBS இல், ஒரு நபரின் நோய் எதிர்ப்பு அமைப்பு (Immune system) அவர்களின் சொந்த நரம்பு மண்டலத்தைத் தாக்குகிறது. GBS பெறும் நபர்களில், இது பொதுவாக பாக்டீரியா அல்லது வைரஸ் தொற்றுக்குப் பிறகு தொடங்குகிறது.</h3>
                                 <h3>&nbsp;</h3>
                                 <h2><span style="color: #0000ff;"><strong>2) Guillain-Barr&eacute; நோய்க்குறியின் அறிகுறிகள் என்ன?</strong></span></h2>
