--- a/knowyourdiseases/bells-palsy.html
+++ b/knowyourdiseases/bells-palsy.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>பெல்ஸ் பால்சி (Bells palsy) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="பெல்ஸ் பால்சி என்பது ஒரு நபரின் முகத்தின் ஒரு பக்கம் பலவீனமாக அல்லது தொய்வடையச் செய்யும் ஒரு நிலை. முகத்தில் உள்ள தசைகளைக் கட்டுப்படுத்தும் நரம்புகளில் ஒன்று சேதமடையும் போது அல்லது வேலை செய்வதை நிறுத்தும்போது இது நிகழலாம். நரம்பு வீக்கமடையும் போது பொதுவாக இந்த நரம்புக்கு சேதம் ஏற்படுகிறது. பெல்ஸ் பால்ஸி உள்ள பெரும்பாலான மக்கள் முழுமையாக குணமடைகின்றனர். ஆனால் சிலருக்கு வாழ்நாள் முழுவதும் பெல்ஸ் பால்சி அறிகுறிகள் இருக்கும்." />
     <base href="/">
     <style>
         img.wp-smiley,
