--- a/knowyourdiseases/parkinsons.html
+++ b/knowyourdiseases/parkinsons.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>பார்கின்சன் நோய் (Parkinson's disease) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது." />
     <base href="/">
     <style>
         img.wp-smiley,
