--- a/knowyourdiseases/meningitis.html
+++ b/knowyourdiseases/meningitis.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>மூளைக்காய்ச்சல் (Meningitis) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="மூளை மற்றும் மூளை தண்டு வடத்தைச் சுற்றியுள்ள திசுக்கள் ('மெனிஞ்சஸ் (Meninges)' என்று அழைக்கப்படும்) தொற்று ஏற்படும் போது மூளைக்காய்ச்சல் ஏற்படுகிறது. உடலின் மற்றொரு பகுதியில் ஏற்பட்ட தொற்று கிருமிகள் இரத்தத்தின் வழியாக மூளை மற்றும் முதுகுத் தண்டுவடத்தைச் சுற்றியுள்ள திசுக்களுக்குச் செல்ல முடியும்." />
     <base href="/">
     <style>
         img.wp-smiley,
