--- a/knowyourdiseases/neuropathic.html
+++ b/knowyourdiseases/neuropathic.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>நரம்பியல் வலி (Neuropathic pain) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி." />
     <base href="/">
     <style>
         img.wp-smiley,
