--- a/knowyourdiseases/neuropathy.html
+++ b/knowyourdiseases/neuropathy.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்." />
     <base href="/">
     <style>
         img.wp-smiley,
