--- a/knowyourdiseases/seizures.html
+++ b/knowyourdiseases/seizures.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>வலிப்பு (Seizures/Epilepsy) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது.  கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்." />
     <base href="/">
     <style>
         img.wp-smiley,
@@ -3882,7 +3882,7 @@
                             </style>
                             <main id="main" class="site-main blog-main" style="text-align: left;">
 
-                                <p class="custom-entry-title">வலிப்பு (Seizures/Epilepsy)</p>
+                                <p class="custom-entry-title">வலிப்பு (Seizures/ Epilepsy)</p>
                             
                                 <h2><span style="color: #0000ff;"><strong>1) வலிப்பு என்றால் என்ன?</strong></span></h2>
                                 <h3>மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது.&nbsp; கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்.</h3>
