--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -8,7 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>பக்கவாதம் (Stroke) - Dr. Arun Gokul Pon</title>
-    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
     <base href="/">
     <style>
         img.wp-smiley,
