Update image alt and title attributes for neurologist image

--- a/index.html
+++ b/index.html
@@ -4743,8 +4743,8 @@
                                                                     class="vc_single_image-wrapper   vc_box_border_grey">
                                                                     <img class="vc_single_image-img "
                                                                         src="./img/expimg.png" width="515"
-                                                                        height="552" alt="cardiologist in Amritsar"
-                                                                        title="close up of man hands with heart" />
+                                                                        height="552" alt="Neurologist in Nagercoil"
+                                                                        title="Dr. Arun Gokul Pon | Neurologist" />
                                                                 </div>
                                                             </figure>
                                                         </div>
