Update CSS styles and fix broken links

--- a/about.html
+++ b/about.html
@@ -3615,9 +3615,9 @@
                                                                                 <div
                                                                                     class="tm-featured-wrapper tm-tm_team_member-featured-wrapper">
                                                                                     <img class="alignnone size-medium wp-image-3332"
-                                                                                        src="./img/expimg.png" alt=""
+                                                                                        src="./img/neurologist.png" alt=""
                                                                                         width="480" height="515"
-                                                                                        srcset="./img/expimg.png" />
+                                                                                        srcset="./img/neurologist.png" />
                                                                                 </div>
                                                                             </div>
                                                                         </div>
