--- a/index.html
+++ b/index.html
@@ -4630,7 +4630,7 @@
                                                         <div
                                                             class="wpb_text_column wpb_content_element  vc_custom_1580455335953">
                                                             <div class="wpb_wrapper">
-                                                                <p>Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages</p>
+                                                                <p>Dr Arun Gokul Pon, top <strong>Neurologist</strong> from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages</p>
 
                                                             </div>
                                                         </div>
@@ -4650,23 +4650,27 @@
                                                                             class="tm-list tm-list-style-icon tm-list-icon-color-skincolor tm- tm-icon-skincolor tm-list-textsize- tm-list-icon-library-fontawesome">
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Stroke</span>
+                                                                                <a href="/knowyourdiseases/stroke.html"><span
+                                                                                    class="tm-list-li-content color-black"><strong>Stroke</strong></span></a>
                                                                             </li>
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Epilepsy</span>
+                                                                                <a href="/knowyourdiseases/seizures.html"><span
+                                                                                    class="tm-list-li-content color-black"><strong>Epilepsy</strong></span></a>
                                                                             </li>
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Headache and Migraine</span>
+                                                                                <a href="/knowyourdiseases/migraine.html"><span
+                                                                                    class="tm-list-li-content color-black"><strong>Headache and Migraine</strong></span></a>
                                                                             </li>
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span class="tm-list-li-content">Tremor</span></li>
-
+                                                                                <a href="/knowyourdiseases/multiple-sclerosis.html"><span class="tm-list-li-content color-black"><strong>Multiple Sclerosis</strong></span></a>
+                                                                            </li>
+                                                                            <li><i
+                                                                                class="tm-skincolor fa fa-arrow-circle-right"></i>
+                                                                            <a href="/knowyourdiseases/bells-palsy.html"><span class="tm-list-li-content color-black"><strong>Bells Palsy</strong></span></a>
+                                                                            </li>
                                                                         </ul>
                                                                     </div>
                                                                 </div>
@@ -4683,22 +4687,27 @@
                                                                             class="tm-list tm-list-style-icon tm-list-icon-color-skincolor tm- tm-icon-skincolor tm-list-textsize- tm-list-icon-library-fontawesome">
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Meningitis</span>
+                                                                                <a href="/knowyourdiseases/meningitis.html"><span
+                                                                                    class="tm-list-li-content color-black"><strong>Meningitis</strong></span></a>
                                                                             </li>
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span class="tm-list-li-content">Vertigo</span></li>
+                                                                                <a href="/knowyourdiseases/vertigo.html"><span class="tm-list-li-content color-black"><strong>Vertigo</strong></span></li></a>
                                                                             <li><i
                                                                                     class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Parkinsonism</span>
+                                                                                <a href="/knowyourdiseases/parkinsons.html"><span
+                                                                                    class="tm-list-li-content color-black"><strong>Parkinsonism</strong></span></a>
                                                                                 </li>
-                                                                                <li><i
-                                                                                    class="tm-skincolor fa fa-arrow-circle-right"></i>
-                                                                                <span
-                                                                                    class="tm-list-li-content">Dystonia</span>
-                                                                                </li>
+                                                                            <li><i
+                                                                                class="tm-skincolor fa fa-arrow-circle-right"></i>
+                                                                            <a href="/knowyourdiseases/neuropathy.html"><span
+                                                                                class="tm-list-li-content color-black"><strong>Neuropathy</strong></span></a>
+                                                                            </li>
+                                                                            <li><i
+                                                                                class="tm-skincolor fa fa-arrow-circle-right"></i>
+                                                                            <a href="/knowyourdiseases/neuropathic.html"><span
+                                                                                class="tm-list-li-content color-black"><strong>Neuropathic Pain</strong></span></a>
+                                                                            </li>
                                                                         </ul>
                                                                     </div>
                                                                 </div>
@@ -4742,7 +4751,7 @@
                                                                 <div
                                                                     class="vc_single_image-wrapper   vc_box_border_grey">
                                                                     <img class="vc_single_image-img "
-                                                                        src="./img/expimg.png" width="515"
+                                                                        src="./img/neurologist.png" width="515"
                                                                         height="552" alt="Neurologist in Nagercoil"
                                                                         title="Dr. Arun Gokul Pon | Neurologist" />
                                                                 </div>
