Update neurologist image description with institution names

--- a/index.html
+++ b/index.html
@@ -4503,7 +4503,7 @@
                                                                                                     class="tm-cta3-description">
                                                                                                     <div
                                                                                                         class="tm-cta3-content-wrapper">
-                                                                                                        <p>Experienced from world renowned institutions like NIMHANS and MGM Healthcare.</p>
+                                                                                                        <p>Experienced from world renowned institutions like <strong>NIMHANS</strong> and MGM Healthcare.</p>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
