Update homepage with hidden neurologist keywords

--- a/index.html
+++ b/index.html
@@ -4009,7 +4009,9 @@
 
 <body
     class="home page-template-default page page-id-2570 tm-headerstyle-classic-highlight themetechmount-topbar-yes themetechmount-wide themetechmount-page-full-width tm-empty-sidebar wpb-js-composer js-comp-ver-5.7 vc_responsive">
-
+    <h1 style="display: none;">AGP Neuro Clinic</h1>
+    <h1 style="display: none;">Neurologist</h1>
+    <h1 style="display: none;">Nagercoil Doctor</h1>
     <div class="main-holder">
 
         <div id="page" class="hfeed site">
