Update meta descriptions and keywords for all disease pages

--- a/knowyourdiseases/GBS.html
+++ b/knowyourdiseases/GBS.html
@@ -8,6 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) - Dr. Arun Gokul Pon</title>
+    <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Guillain barre syndrome Doctor,GBS Doctor, குய்லின்-பாரே நோய்">
     <meta name="description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்." />
     <base href="/">
     <style>
