--- a/knowyourdiseases/dementia.html
+++ b/knowyourdiseases/dementia.html
@@ -8,6 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>மறதி நோய் அல்லது டிமென்ஷியா (Dementia) - Dr. Arun Gokul Pon</title>
+    <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Dementia Doctor,மறதி நோய் அல்லது டிமென்ஷியா">
     <meta name="description" content="டிமென்ஷியா என்பது நினைவாற்றல் பிரச்சினைகளை ஏற்படுத்தும் மூளைக் கோளாறுகளின் ஒரு பொதுவான சொல்." />
     <base href="/">
     <style>
