--- a/knowyourdiseases/neuropathic.html
+++ b/knowyourdiseases/neuropathic.html
@@ -8,6 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>நரம்பியல் வலி (Neuropathic pain) - Dr. Arun Gokul Pon</title>
+    <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Neuropathic Doctor,நரம்பியல் வலி">
     <meta name="description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி." />
     <base href="/">
     <style>
