Update meta tags for better SEO optimization

--- a/knowyourdiseases/multiple-sclerosis.html
+++ b/knowyourdiseases/multiple-sclerosis.html
@@ -8,6 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>மல்டிபிள் ஸ்களீரோசிஸ் (Multiple Sclerosis) - Dr. Arun Gokul Pon</title>
+<meta name="revisit-after" content="14 days">
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Multiple Sclerosis Doctor,மல்டிபிள் ஸ்களீரோசிஸ்">
     <meta name="description" content="மல்டிபிள் ஸ்களீரோசிஸ் என்பது பார்வை குறைபாடுகள், உணர்வின்மை மற்றும் கூச்ச உணர்வு, தசை பலவீனம் மற்றும் பிற பிரச்சனைகளை ஏற்படுத்தும் ஒரு நோயாகும். உடலின் நோய் எதிர்ப்பு சக்தி நரம்பு செல்கள் மற்றும் மூளை மற்றும் முதுகுத் தண்டில் உள்ள அவற்றின் இணைப்புகளைத் தாக்கி சேதப்படுத்தும் போது இது நிகழ்கிறது. பலர் மல்டிபிள் ஸ்களீரோசிஸை 'எம்எஸ் (MS)'' என்று குறிப்பிடுகின்றனர்." />
     <base href="/">
