--- a/wp-content/themes/brivona/fonts/glyphicons-halflings-regular-3.html
+++ b/wp-content/themes/brivona/fonts/glyphicons-halflings-regular-3.html
@@ -6,6 +6,7 @@
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Page not found - Dr. Arun Gokul Pon</title>
+<meta name="revisit-after" content="14 days">
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor">
 		<meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
 
