--- a/wp-content/themes/brivona/fonts/glyphicons-halflings-regular-5.html
+++ b/wp-content/themes/brivona/fonts/glyphicons-halflings-regular-5.html
@@ -6,6 +6,7 @@
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Page not found - Dr. Arun Gokul Pon</title>
+<meta name="revisit-after" content="14 days">
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor">
 
 <!-- This site is optimized with the Yoast SEO plugin v12.7 - https://yoast.com/wordpress/plugins/seo/ -->
