Update CSS styles and add dropdown menu for handout links

--- a/about.html
+++ b/about.html
@@ -3507,8 +3507,17 @@
                                                     </div>
                                                 </li>
                                                 <li id="menu-item-3075"
-                                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071">
-                                                    <a href="handbook.html">Handbook</a></li>
+                                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071 menu-item-dropdown">
+                                                    <a>Handout</a>
+                                                    <div class="menu-item-dropdown-content">
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/back-strengthening.html">Exercises for Back Strengthening</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/neck-strengthening.html">Exercises for Neck Strengthening</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/shoulder-strengthening.html">Exercises for Shoulder Strengthening</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/home-vestibular-exercises.html">Home Vestibular Exercises</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/headache-diary.html">Headache Diary</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/handout/seizure-diary.html">Seizure Diary</a>
+                                                    </div>
+                                                </li>
                                                 <li id="menu-item-3075"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071">
                                                     <a href="services.html">Services</a></li>
