Update meta tags for improved SEO optimization

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Best Neurologist in Nagercoil | Dr. Arun Gokul Pon </title>
-<meta name="revisit-after" content="14 days">
+    <meta name="revisit-after" content="14 days">
+    <link rel="canonical" href="https://agpneuroclinic.com" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
