--- a/knowyourdiseases/migraine.html
+++ b/knowyourdiseases/migraine.html
@@ -8,7 +8,8 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ஒற்றைத் தலைவலி (Migraine) - Dr. Arun Gokul Pon</title>
-<meta name="revisit-after" content="14 days">
+    <meta name="revisit-after" content="14 days">
+    <link rel="canonical" href="https://agpneuroclinic.com/knowyourdiseases/migraine.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Migraine Doctor,ஒற்றைத் தலைவலி">
     <meta name="description" content="ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்." />
     <base href="/">
