--- a/knowyourdiseases/seizures.html
+++ b/knowyourdiseases/seizures.html
@@ -8,7 +8,8 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>வலிப்பு (Seizures/Epilepsy) - Dr. Arun Gokul Pon</title>
-<meta name="revisit-after" content="14 days">
+    <meta name="revisit-after" content="14 days">
+    <link rel="canonical" href="https://agpneuroclinic.com/knowyourdiseases/seizures.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Seizures Doctor,Epilepsy Doctor,வலிப்பு">
     <meta name="description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது.  கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்." />
     <base href="/">
