--- a/knowyourdiseases/vertigo.html
+++ b/knowyourdiseases/vertigo.html
@@ -8,7 +8,8 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>தலைசுற்று (Vertigo) - Dr. Arun Gokul Pon</title>
-<meta name="revisit-after" content="14 days">
+    <meta name="revisit-after" content="14 days">
+    <link rel="canonical" href="https://agpneuroclinic.com/knowyourdiseases/vertigo.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Vertigo Doctor,தலைசுற்று">
     <meta name="description" content="வெர்டிகோ என்பது ஒரு வகையான தலைச்சுற்றல் ஆகும், இது நீங்கள் சுழல்வது, அசைவது அல்லது சாய்வது போன்ற உணர்வை ஏற்படுத்துகிறது.  உங்கள் தலையை நகர்த்தும்போது, நிலைகளை மாற்றும்போது, இருமல் அல்லது தும்மும்போது நீங்கள் மோசமாக உணரலாம். தலைச்சுற்றல் உள்ள சிலருக்கு நடப்பதில் சிரமம் இருக்கும். வெர்டிகோ உள்ள சிலருக்கு குமட்டல் மற்றும் வாந்தி வரலாம்." />
     <base href="/">
