--- a/handout/home-vestibular-exercises.html
+++ b/handout/home-vestibular-exercises.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home Vestibular Exercises - Dr. Arun Gokul Pon</title>
     <meta name="revisit-after" content="14 days">
+    <link rel="canonical" href="https://agpneuroclinic.com/handout/home-vestibular-exercises.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,BPPV Exercises,Home Vestibular Exercises,Vertigo Exercises">
     <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
     <base href="/">
